issue #378: fixing the list items disposition and alignment of radios

--- a/components/list/src/vwc-check-list-item.scss
+++ b/components/list/src/vwc-check-list-item.scss
@@ -2,6 +2,7 @@
 
 :host{
 	@include typography.typography-cat-shorthand('body-2');
+	margin: 0;
 }
 
 :host(:not([left])) > .mdc-list-item__meta {
